--- a/package.json
+++ b/package.json
@@ -74,9 +74,9 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "start": "node scripts/start.ts",
+    "build": "node scripts/build.ts",
+    "test": "node scripts/test.ts"
   },
   "eslintConfig": {
     "extends": "react-app"
